HTMLRecap products.html and forums.html pages added

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <nav style="text-align: right;">
-        <a href="../HTMLRecap/index.html">Home</a>
+        <a href="../HTMLRecap/home.html">Home</a>
         <a href="../HTMLRecap/index.html">Products</a>
         <a href="../HTMLRecap/index.html">Forums</a>
     </nav>
