HTMLRecap index.html navs added

--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 <body>
     <nav style="text-align: right;">
         <a href="../HTMLRecap/home.html">Home</a>
-        <a href="../HTMLRecap/index.html">Products</a>
-        <a href="../HTMLRecap/index.html">Forums</a>
+        <a href="../HTMLRecap/products.html">Products</a>
+        <a href="../HTMLRecap/forums.html">Forums</a>
     </nav>
     <div>
         <h1 style= "text-align:center; color: red">Wakeboard Demo Form</h1>
