iframe video added

--- a/index.html
+++ b/index.html
@@ -17,8 +17,11 @@
         <p style= "text-align:center">Fill out the following form in order to request a demo on any of our 1000's of in-stock boards and bindings</p>
 
         <br />
+        <div style="text-align: center">
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/yOaxZVDUrZc" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        </div>
 
-        <div style="border: solid; border-width: thick; background-color: rgb(165, 164, 164);">
+        <div style="width:800px; margin-left:auto; margin-right:auto; border: solid; border-width: thick; background-color: rgb(165, 164, 164);">
             <form>
                 <h2 style="text-align:center;">Lets get you on the water in style</h2>
                 <fieldset>
